fix veeerrrrrry little BUG, make the code suitable for COURSE requirement and add some guidance in README.md to make those who want to use the code implement it more smoothly.